--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-body, html {
+.body, html {
   margin: 0;
   padding: 0;
   width: 100%;
@@ -6,9 +6,9 @@ body, html {
 }
 
 .background {
-  background-color: #000;
-  background-size: cover; 
-  background-position: center; 
+  background-color: #000000;
+  background-size: cover;
+  background-position: center;
   background-repeat: no-repeat;
   width: 100vw;
   height: 100vh;
@@ -23,17 +23,17 @@ body, html {
     transform: translateX(0);
   }
   100% {
-    transform: translateX(50px);
+    transform: translateX(-350px);
   }
 }
 
 .button-shift {
-  animation: shiftButton 0.5s forwards;
+  animation: shiftButton 3s forwards;
 }
 
 .drop-zone {
-  width: 230px;
-  height: 400px;
+  width: 400px;
+  height: 800px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -44,27 +44,54 @@ body, html {
 }
 
 .drop-zone.dragging {
-  border-color: #000;
-  background-color: rgba(0, 0, 0, 0.1); 
+  border-color: #ffffff;
+  background-color: rgba(255, 255, 255, 0.1); 
 }
 
 .drop-zone p {
   margin: 0;
   color: #aaa;
-  margin-top: 10px;
+  margin-top: 0px;
   z-index: 1;
 }
 
-.drop-zone video {
+.upload-container {
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border-radius: 100px;
+}
+
+.vid-button {
+  width: 100%;
+  height: 100%;
+  border-radius: 100px; /* Adjust to match your button's rounded edges */
+  overflow: hidden;
+}
+
+.video-container {
+  position: absolute;
+  top: 0px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 100px; /* Match the button's rounded edges */
+  overflow: hidden;
+  z-index: 1;
+}
+
+.video-preview {
   width: 100%;
   height: 100%;
   border: none;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 2;
+  border-radius: 100px;
+  object-fit: cover; /* Ensures the video covers the entire area without distortion */
+  overflow: hidden;
 }
-
 .drop-zone svg {
   position: absolute;
   top: 50%;
